Installed date-fns library

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/hassanbaryal/to-do-checklist#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "date-fns": "^2.29.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack-cli": "^4.10.0",
